# SDUQuad48MITSimRL

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: cTypes.h  cppTypes.h  global_config.h
common/include/ControlParameters/: ControlParameters.h
common/include/Controllers/: LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h  TouchdownDetect.h
common/include/Dynamics/: MiniCheetah.h  SpatialInertia.h
common/include/Math/: MathUtilities.h  orientation_tools.h
common/include/SimUtilities/: SimulatorMessage.h  SpineBoard.h
common/include/Utilities/: CKalmanFilter.h  Timer.h  utilities.h
common/src/ControlParameters/: ControlParameters.cpp
common/src/Controllers/: LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  TouchdownDetect.cpp
common/src/Dynamics/: Quadruped.cpp
common/src/SimUtilities/: SpineBoard.cpp
common/src/Utilities/: CKalmanFilter.cpp  PeriodicTask.cpp
config/: default-terrain.yaml  default-user-parameters-file.yaml  mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml  test-yaml.yaml
lcm-types/: SDUog_Param.lcm  file_list.txt  motor_cmd_t.lcm  motor_state_t.lcm  rc_cmd_t.lcm  vision_data_t.lcm  vision_start_stop.lcm
lcm-types/cpp/: SDUog_Parameter_t.hpp  T265position_t.hpp  cheetah_visualization_lcmt.hpp  control_parameter_request_lcmt.hpp  control_parameter_respones_lcmt.hpp  ecat_command_t.hpp  ecat_data_t.hpp  heightmap_t.hpp  leg_control_command_lcmt.hpp  leg_control_data_lcmt.hpp  localization_lcmt.hpp  obstacle_visual_t.hpp  qp_controller_data_t.hpp  rc_channels_t.hpp  rpc_data_clean_t.hpp  rpc_data_t.hpp  rpc_inputs_t.hpp  rpc_outputs_t.hpp  rs_pointcloud_t.hpp  sim_command_t.hpp  simulator_lcmt.hpp  spi_command_t.hpp  spi_data_t.hpp  spi_torque_t.hpp  traversability_map_t.hpp  two_contact_stand_data_t.hpp  vectornav_lcmt.hpp  velocity_visual_t.hpp  vision_data_t.hpp  vision_start_stop_t.hpp  wbc_test_data_t.hpp
lcm-types/lcmtypes/: SDUog_Parameter_t.java  T265position_t.java  cheetah_visualization_lcmt.java  control_parameter_request_lcmt.java  control_parameter_respones_lcmt.java  ecat_command_t.java  ecat_data_t.java  heightmap_t.java  leg_control_command_lcmt.java  leg_control_data_lcmt.java  localization_lcmt.java  obstacle_visual_t.java  qp_controller_data_t.java  rc_channels_t.java  rpc_data_clean_t.java  rpc_data_t.java  rpc_inputs_t.java  rpc_outputs_t.java  rs_pointcloud_t.java  sim_command_t.java  simulator_lcmt.java  spi_command_t.java  spi_data_t.java  spi_torque_t.java  traversability_map_t.java  two_contact_stand_data_t.java  vectornav_lcmt.java  velocity_visual_t.java  vision_data_t.java  vision_start_stop_t.java  wbc_test_data_t.java
lcm-types/python/: SDUog_Parameter_t.py  T265position_t.py  cheetah_visualization_lcmt.py  control_parameter_request_lcmt.py  control_parameter_respones_lcmt.py  ecat_command_t.py  ecat_data_t.py  heightmap_t.py  leg_control_command_lcmt.py  leg_control_data_lcmt.py  localization_lcmt.py  obstacle_visual_t.py  qp_controller_data_t.py  rc_channels_t.py  rpc_data_clean_t.py  rpc_data_t.py  rpc_inputs_t.py  rpc_outputs_t.py  rs_pointcloud_t.py  sim_command_t.py  (+11 more)
scripts/: send_to_mini_cheetah.sh
sim/: CMakeLists.txt
user/: CMakeLists.txt
(+45 files in other folders)
